// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. modal image 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    visible={false}
  >
    <View>
      <View>
        <View>
          <View>
            <View
              pointerEvents="box-only"
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../packages/image/assets/close-button.png",
                  }
                }
              />
            </View>
          </View>
          <View>
            <View>
              <View>
                <View
                  aspectRatio={1.5}
                >
                  <View>
                    <Gradient
                      degrees={264}
                    />
                  </View>
                  <Image
                    source={
                      Object {
                        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
                      }
                    }
                  />
                  <Image
                    source={
                      Object {
                        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
          <View>
            <Text>
              Caption
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    pointerEvents="box-only"
  >
    <View
      aspectRatio={1.5}
    >
      <View>
        <Gradient
          degrees={264}
        />
      </View>
      <Image
        source={
          Object {
            "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. modal image with custom highressize 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    visible={false}
  >
    <View>
      <View>
        <View>
          <View>
            <View
              pointerEvents="box-only"
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../packages/image/assets/close-button.png",
                  }
                }
              />
            </View>
          </View>
          <View>
            <View>
              <View>
                <View
                  aspectRatio={1.5}
                >
                  <View>
                    <Gradient
                      degrees={264}
                    />
                  </View>
                  <Image
                    source={
                      Object {
                        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
                      }
                    }
                  />
                  <Image
                    source={
                      Object {
                        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
          <View>
            <Text>
              Caption
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    pointerEvents="box-only"
  >
    <View
      aspectRatio={1.5}
    >
      <View>
        <Gradient
          degrees={264}
        />
      </View>
      <Image
        source={
          Object {
            "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
          }
        }
      />
    </View>
  </View>
</View>
`;
